<resources>

    <string name="app_name">Pomodrive</string>
    <string name="pomodrive">Pomodrive</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Pomodrive</string>
    <string name="title_activity_list">Lista de tareas</string>
    <string name="reloj">25:00</string>
    <string name="adicionar">Adicionar</string>
    
    <string name="show">Detalle</string>
    <string name="turnDone">Hecho On/Off</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    
    <string name="btnSave">Guardar</string>
    <string name="btnCancel">Cancelar</string>
    <!-- Form Dialog pomodoro -->
    <string name="taskName">Tarea</string>
    <string name="interruptionName">Interrupcion</string>
    <string name="estimated">Estimado</string>
    
    <string name="TitleConfig">Configurar Tiempos</string>
    <string name="TitleShow">Detalle de Pomodoro</string>
    <string name="TitleAdd">Adicionar Pomodoro</string>
    <string name="TitleEdit">Editar Pomodoro</string>
    <string name="TitleDelete">Eliminar Pomodoro</string>
    <string name="confirmDelete">Realmente desea Eliminar?</string>
    <string name="TitleInterruption">Adicionar Interrupcion</string>
    <string name="TitleUnplanned">Adicionar Pomodoro no Planeado</string>
    
    
    <string name="lblEstimated">Estimado</string>
    
    <string name="yes">SI</string>
    <string name="no">NO</string>
    <string name="lblStart">Iniciar</string>
    <string name="lblInterruption">Interrupcion</string>
    <string name="lblUnplanned">No Planeado</string>
    <string name="lblStop">Detener</string>
    <string name="lblDone">Hecho</string>
    <string name="lblNext">Siguiente</string>
    
    <!-- config pomodoro -->
    <string name="strLblCnfPomLength">Pomodoro length</string>
    <string name="strLblCnfBrkShortLength">Short break Length</string>
    <string name="strLblCnfBrkLongLength">Long break length</string>
    <string name="strLblCnfBrkLongInterval">Long break interval</string>
    
    <string name="author">Gaston Nina</string>
</resources>