<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblFrmTxtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taskName" />

    <EditText
        android:id="@+id/pomTxtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblFrmTxtEstimated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblEstimated" />

    <EditText
        android:id="@+id/pomTxtId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:ems="10" />
    <SeekBar
        android:id="@+id/pomBarEstimated"
        android:max="6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnFrmSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnSave" />

        <Button
            android:id="@+id/btnFrmCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnCancel" />
    </LinearLayout>   

</LinearLayout>