<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:adjustViewBounds="false"
        android:scaleType="centerCrop"
        android:contentDescription="@string/pomodrive"
        android:src="@drawable/pomodoro" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:progress="80" />

    <TextView
        android:id="@+id/lblReloj"
        style="@style/PomodriveTheme.redGoogleAlpha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reloj"
        android:textSize="100sp"
        tools:context=".MainActivity" />
    <!-- android:background="@drawable/play_icon" -->

    <Button
        android:id="@+id/btnTimer"
        style="@style/PomodriveTheme.grid2"
        android:drawableLeft="@drawable/ico_play"
        android:onClick="startPomodoro"
        android:text="@string/lblStart" />
    <Button
        android:id="@+id/btnInterruption"
        style="@style/PomodriveTheme.grid1.left"
        android:layout_marginTop="250dp"
        android:drawableLeft="@drawable/ico_pause"
        android:onClick="registerInterruption"
        android:text="@string/lblInterruption" />
    <Button
        android:id="@+id/btnUnplanned"
        style="@style/PomodriveTheme.grid1.right"
        android:layout_marginTop="250dp"
        android:drawableLeft="@drawable/ico_unplanned"
        android:onClick="registerUnpplanned"
        android:text="@string/lblUnplanned" />
    
    <Button
        android:id="@+id/btnTimer2"
        style="@style/PomodriveTheme.grid0"
        android:text="@string/lblDone" />

    <TextView
        android:id="@+id/lblCurTask"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="180dp"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Chronometer
        android:id="@+id/chrono"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        />

    <SlidingDrawer
        android:id="@+id/slidingDrawer1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:content="@+id/content"
        android:handle="@+id/handle" >

        <Button
            android:id="@+id/handle"
            android:layout_width="43dp"
            android:layout_height="25dp"
            android:background="@drawable/arrow_up" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <ListView 
    android:id="@+id/taskList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#afff" 
    >
    

</ListView>

        </LinearLayout>

        

    </SlidingDrawer>

    <Button
        android:id="@+id/btnConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:drawableLeft="@drawable/ico_config"
        android:onClick="configOption"
        android:minWidth="48dip" />
    <Button
        android:id="@+id/btnAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="48dp"
        android:drawableLeft="@drawable/ico_foco"
        android:onClick="aboutOption"
        android:minWidth="48dip" />
    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:drawableLeft="@drawable/ico_add"
        android:onClick="addOption"
        android:minWidth="48dip" />

</RelativeLayout>
